--- a/notebooks/tifPlayground.ipynb
+++ b/notebooks/tifPlayground.ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload\n",
+    "%matplotlib inline\n",
     "import gdal\n",
     "import os\n",
     "import glob\n",
@@ -14,7 +17,10 @@
     "import numpy as np\n",
     "# osgeo (gdal related)\n",
     "# rasterio\n",
-    "# berkeley tree data"
+    "# berkeley tree data\n",
+    "import sys\n",
+    "sys.path.insert(0, \"../src\")\n",
+    "import satellite_analyze"
    ]
   },
   {
@@ -39,17 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = '../data/raw/ortho_04_07_2018_4_bands_16bit.tif'\n",
+    "filename = '../data/raw/athens_satellite.tif'\n",
     "outpath = '../raster_out'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,22 +64,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'AREA_OR_POINT': 'Area',\n",
-       " 'TIFFTAG_RESOLUTIONUNIT': '2 (pixels/inch)',\n",
-       " 'TIFFTAG_SOFTWARE': 'ERDAS IMAGINE',\n",
-       " 'TIFFTAG_XRESOLUTION': '1',\n",
-       " 'TIFFTAG_YRESOLUTION': '1'}"
+       "osgeo.gdal.Dataset"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(ds_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'GetMetadata'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-73603b8ad752>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mds_all\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetMetadata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'GetMetadata'"
+     ]
     }
    ],
    "source": [
