Get geospatial coordinates in notebook

--- a/notebooks/tifPlayground.ipynb
+++ b/notebooks/tifPlayground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,23 +84,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'GetMetadata'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-73603b8ad752>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mds_all\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetMetadata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'GetMetadata'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'AREA_OR_POINT': 'Area',\n",
+       " 'TIFFTAG_RESOLUTIONUNIT': '2 (pixels/inch)',\n",
+       " 'TIFFTAG_SOFTWARE': 'ERDAS IMAGINE',\n",
+       " 'TIFFTAG_XRESOLUTION': '1',\n",
+       " 'TIFFTAG_YRESOLUTION': '1'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "ds_all.GetMetadata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<osgeo.gdal.Band; proxy of <Swig Object of type 'GDALRasterBandShadow *' at 0x1143de990> >"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds_all.GetRasterBand(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from osgeo import gdal\n",
+    "\n",
+    "# unravel GDAL affine transform parameters\n",
+    "c, a, b, f, d, e = ds_all.GetGeoTransform()\n",
+    "\n",
+    "def pixel2coord(col, row):\n",
+    "    \"\"\"Returns global coordinates to pixel center using base-0 raster index\"\"\"\n",
+    "    xp = a * col + b * row + a * 0.5 + b * 0.5 + c\n",
+    "    yp = d * col + e * row + d * 0.5 + e * 0.5 + f\n",
+    "    return(xp, yp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Getting Dataset Information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Driver: GTiff/GeoTIFF\n",
+      "Size is 43757 x 43589 x 4\n",
+      "Projection is PROJCS[\"IMAGINE GeoTIFF Support\n",
+      "ERDAS IMAGINE 2014  14.0.0.181\n",
+      "Projection = Transverse Mercator\",GEOGCS[\"EGSA87\",DATUM[\"EGSA87\",SPHEROID[\"GRS 1980\",6378137,298.2572220960422,AUTHORITY[\"EPSG\",\"7019\"]]],PRIMEM[\"Greenwich\",0],UNIT[\"degree\",0.0174532925199433]],PROJECTION[\"Transverse_Mercator\"],PARAMETER[\"latitude_of_origin\",0],PARAMETER[\"central_meridian\",24],PARAMETER[\"scale_factor\",0.9996],PARAMETER[\"false_easting\",500000],PARAMETER[\"false_northing\",0],UNIT[\"meters\",1]]\n",
+      "Origin = (469505.999594, 4210645.52923)\n",
+      "Pixel Size = (0.3, -0.3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adfGeoTransform[0] /* top left x */\n",
+    "# adfGeoTransform[1] /* w-e pixel resolution */\n",
+    "# adfGeoTransform[2] /* 0 */\n",
+    "# adfGeoTransform[3] /* top left y */\n",
+    "# adfGeoTransform[4] /* 0 */\n",
+    "# adfGeoTransform[5] /* n-s pixel resolution (negative value) */\n",
+    "\n",
+    "dataset = ds_all\n",
+    "print(\"Driver: {}/{}\".format(dataset.GetDriver().ShortName,\n",
+    "                             dataset.GetDriver().LongName))\n",
+    "print(\"Size is {} x {} x {}\".format(dataset.RasterXSize,\n",
+    "                                    dataset.RasterYSize,\n",
+    "                                    dataset.RasterCount))\n",
+    "print(\"Projection is {}\".format(dataset.GetProjection()))\n",
+    "geotransform = dataset.GetGeoTransform()\n",
+    "if geotransform:\n",
+    "    print(\"Origin = ({}, {})\".format(geotransform[0], geotransform[3]))\n",
+    "    print(\"Pixel Size = ({}, {})\".format(geotransform[1], geotransform[5]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(x, y) = pixel2coord(0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(469506.1495942082, 4210645.379225904)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x,y)"
    ]
   },
   {
