--- a/notebooks/test_satellite class.ipynb
+++ b/notebooks/test_satellite class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -11,31 +11,6 @@
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of src.models.predict_classes failed: Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/IPython/extensions/autoreload.py\", line 244, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/IPython/extensions/autoreload.py\", line 374, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/usr/local/lib/python3.6/imp.py\", line 315, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"/usr/local/lib/python3.6/importlib/__init__.py\", line 166, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 618, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 674, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 781, in get_code\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 741, in source_to_code\n",
-      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
-      "  File \"../src/models/predict_classes.py\", line 139\n",
-      "    if a_dir not self.base_dir:\n",
-      "                    ^\n",
-      "SyntaxError: invalid syntax\n",
-      "]\n"
      ]
     }
    ],
@@ -52,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,33 +39,94 @@
     "c_end=2000\n",
     "sat_master = src.models.predict_classes.SatelliteTif(tif_path, rel_path,\n",
     "                 c_channels=[0, 1, 3], sub_img_w=200, sub_img_h=200,\n",
-    "                 valid_frac = 0.3,\n",
+    "                 num_train = 20, valid_frac = 0.3,\n",
     "                 r_start=1000, r_end=2000, c_start=0, c_end=np.inf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1308"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "built train\n",
+      "built valid\n",
+      "built pred\n"
+     ]
     }
    ],
    "source": [
-    "len(sat_master.pred_origins)"
+    "sat_master.build_train_dataset()\n",
+    "print('built train')\n",
+    "sat_master.build_valid_dataset()\n",
+    "print('built valid')\n",
+    "sat_master.build_pred_dataset()\n",
+    "print('built pred')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1308\n",
+      "[[  872     0]\n",
+      " [  872   200]\n",
+      " [  872   400]\n",
+      " ...\n",
+      " [ 1872 43000]\n",
+      " [ 1872 43200]\n",
+      " [ 1872 43400]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(sat_master.pred_origins))\n",
+    "print(sat_master.pred_origins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'skimage' has no attribute 'io'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-129-4743225fb0af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mskimage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mskimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimwrite\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'skimage' has no attribute 'io'"
+     ]
+    }
+   ],
+   "source": [
+    "import skimage\n",
+    "skimage.io.imwrite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skimage import io\n",
+    "io.imwri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -98,13 +134,115 @@
      "output_type": "stream",
      "text": [
       "70\n",
-      "30\n"
+      "30\n",
+      "[[22880 17080]\n",
+      " [28880 26080]\n",
+      " [22680 16280]\n",
+      " [14880 14480]\n",
+      " [29480 22880]\n",
+      " [18480 24280]\n",
+      " [28280 27480]\n",
+      " [14280 16280]\n",
+      " [17280 19480]\n",
+      " [25280 18480]\n",
+      " [18080 16080]\n",
+      " [28280 16480]\n",
+      " [23680 30480]\n",
+      " [13080 28280]\n",
+      " [27280 28080]\n",
+      " [21480 23880]\n",
+      " [15080 19080]\n",
+      " [19880 30480]\n",
+      " [15480 23480]\n",
+      " [21680 26480]\n",
+      " [15680 29880]\n",
+      " [18680 23680]\n",
+      " [29080 25280]\n",
+      " [17280 23480]\n",
+      " [30080 22080]\n",
+      " [19680 22280]\n",
+      " [21680 14880]\n",
+      " [21480 16480]\n",
+      " [24480 26680]\n",
+      " [21080 27480]\n",
+      " [22880 26480]\n",
+      " [30080 21080]\n",
+      " [24480 15080]\n",
+      " [16080 21480]\n",
+      " [27480 24880]\n",
+      " [29280 18080]\n",
+      " [23280 14680]\n",
+      " [20880 29080]\n",
+      " [16080 15880]\n",
+      " [29480 19480]\n",
+      " [22880 18080]\n",
+      " [28080 26680]\n",
+      " [28080 27680]\n",
+      " [27680 16280]\n",
+      " [25280 22080]\n",
+      " [23280 25080]\n",
+      " [29280 19480]\n",
+      " [18680 29680]\n",
+      " [27480 29480]\n",
+      " [13480 28680]\n",
+      " [13080 19280]\n",
+      " [30480 25280]\n",
+      " [26080 19480]\n",
+      " [16680 26880]\n",
+      " [19280 13880]\n",
+      " [24080 21880]\n",
+      " [17080 17480]\n",
+      " [20280 20480]\n",
+      " [26680 19280]\n",
+      " [14480 15680]\n",
+      " [19880 28480]\n",
+      " [15480 23080]\n",
+      " [27280 29280]\n",
+      " [14480 17880]\n",
+      " [22480 28480]\n",
+      " [13480 29680]\n",
+      " [17480 25280]\n",
+      " [16280 29680]\n",
+      " [19480 24480]\n",
+      " [18080 14080]]\n",
+      "[[14080 22880]\n",
+      " [16080 21880]\n",
+      " [13080 24080]\n",
+      " [15480 26680]\n",
+      " [30480 22280]\n",
+      " [23680 16880]\n",
+      " [30480 20880]\n",
+      " [23880 14480]\n",
+      " [23480 17880]\n",
+      " [23080 19280]\n",
+      " [18080 29480]\n",
+      " [25480 16280]\n",
+      " [19280 30480]\n",
+      " [16680 23080]\n",
+      " [23680 30080]\n",
+      " [29280 15080]\n",
+      " [20680 19480]\n",
+      " [29280 22280]\n",
+      " [22880 24280]\n",
+      " [23280 22480]\n",
+      " [13680 18080]\n",
+      " [20880 17280]\n",
+      " [18680 21280]\n",
+      " [26480 27680]\n",
+      " [28880 15680]\n",
+      " [13080 29480]\n",
+      " [19880 26280]\n",
+      " [19280 16280]\n",
+      " [16880 13680]\n",
+      " [13080 18480]]\n"
      ]
     }
    ],
    "source": [
     "print(len(sat_master.train_origins))\n",
-    "print(len(sat_master.valid_origins))"
+    "print(len(sat_master.valid_origins))\n",
+    "print(sat_master.train_origins)\n",
+    "print(sat_master.valid_origins)"
    ]
   },
   {
@@ -227,12 +365,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not 3==4:\n",
+    "    print('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if 3 "
-   ]
+   "source": []
   }
  ],
  "metadata": {
