--- a/notebooks/pixpeak_from_tif_demo.ipynb
+++ b/notebooks/pixpeak_from_tif_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -21,9 +21,11 @@
     "import rasterio\n",
     "import sys\n",
     "sys.path.insert(0, \"..\")\n",
-    "import src.satellite_analyze\n",
-    "import src.plot\n",
-    "from src.models.utils_pixpeak import detect_peaks"
+    "import src.plotting.plot\n",
+    "from src.models.utils_pixpeak import get_satellite_subset\n",
+    "from src.models.utils_pixpeak import get_tree_finder_image\n",
+    "from src.models.utils_pixpeak import detect_peaks\n",
+    "from src.plotting.plot import plot_satellite_image"
    ]
   },
   {
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -92,24 +94,24 @@
    ],
    "source": [
     "# get the band data\n",
-    "band_data = src.satellite_analyze.get_satellite_subset(ds_all, \n",
-    "                                                       r_start, \n",
-    "                                                       r_end, \n",
-    "                                                       c_start, \n",
-    "                                                       c_end,\n",
-    "                                                       norm=1)\n",
+    "band_data = get_satellite_subset(ds_all,\n",
+    "                                 r_start, \n",
+    "                                 r_end,\n",
+    "                                 c_start,\n",
+    "                                 c_end,\n",
+    "                                 norm=1)\n",
     "# get tree data\n",
-    "plant_data = src.satellite_analyze.get_tree_finder_image(band_data)\n",
+    "plant_data = get_tree_finder_image(band_data)\n",
     "# get peaks\n",
     "trees_local = detect_peaks(plant_data)\n",
     "# set color bands to r, g, IR\n",
     "my_color_bands = [0,1,3]\n",
     "# plot it\n",
-    "src.plot.plot_satellite_image((255*band_data).astype(int),\n",
-    "                              plant_data,\n",
-    "                              plot_all=False,\n",
-    "                              tree_loc=trees_local,\n",
-    "                              colorbands=my_color_bands)"
+    "plot_satellite_image((255*band_data).astype(int),\n",
+    "                     plant_data,\n",
+    "                     plot_all=False,\n",
+    "                     tree_loc=trees_local,\n",
+    "                     colorbands=my_color_bands)"
    ]
   }
  ],
