Updated README image. Addressed all Matt's comments

--- a/notebooks/build_tif_subset.ipynb
+++ b/notebooks/build_tif_subset.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "# save it\n",
+    "# test it\n",
     "test_subset(fname_save)"
    ]
   }
@@ -133,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
